# so_pointjax

./: LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
so_pointjax/: __init__.py
so_pointjax/erfa/: README.md  __init__.py  _leapsec.py  _types.py
so_pointjax/erfa/_core/: angles.py  astrometry.py  calendar.py  constants.py  ephem.py  frames.py  geodetic.py  gnomonic.py  precnut.py  time.py  vector.py
so_pointjax/erfa/_data/: epv00_e0x.npy  epv00_e0y.npy  epv00_e0z.npy  epv00_e1x.npy  epv00_e1y.npy  epv00_e1z.npy  epv00_e2x.npy  epv00_e2y.npy  epv00_e2z.npy  epv00_s0x.npy  epv00_s0y.npy  epv00_s0z.npy  epv00_s1x.npy  epv00_s1y.npy  epv00_s1z.npy  epv00_s2x.npy  epv00_s2y.npy  epv00_s2z.npy  nut00a_lunisolar.npy  nut00a_planetary.npy
so_pointjax/erfa/tests/: conftest.py  test_angles.py  test_astrometry.py  test_calendar.py  test_ephem.py  test_frames.py  test_grad.py  test_leapsec.py  test_precnut.py  test_time.py  test_types.py  test_validation.py  test_vector.py
so_pointjax/proj/: README.md  __init__.py  coords.py  quat.py  util.py  weather.py
so_pointjax/proj/benchmarks/: bench_quat_array.py  bench_so3g.py
so_pointjax/proj/tests/: test_coords.py  test_cross_validation.py  test_quat.py
so_pointjax/qpoint/: README.md  __init__.py  _corrections.py  _iers.py  _pixel.py  _pointing.py  _quaternion.py  _state.py  _time_utils.py
so_pointjax/qpoint/benchmarks/: bench_breakdown.py  bench_pointing.py
so_pointjax/qpoint/tests/: test_corrections.py  test_iers.py  test_pixel.py  test_pointing.py  test_quaternion.py  test_state.py  test_time_utils.py  test_validation.py
