[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "so-pointjax"
version = "0.1.0"
description = "Differentiable telescope pointing in JAX — ERFA, qpoint, and so3g.proj combined"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
keywords = ["astronomy", "astrometry", "jax", "differentiable", "pointing", "telescope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.22",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pyerfa>=2.0"]
crossval = ["pytest>=7.0", "pyerfa>=2.0", "qpoint>=1.12", "so3g>=0.2"]

[tool.setuptools.packages.find]
include = ["so_pointjax*"]

[tool.setuptools.package-data]
"so_pointjax.erfa" = ["_data/*.npy"]

[tool.pytest.ini_options]
testpaths = [
    "so_pointjax/erfa/tests",
    "so_pointjax/qpoint/tests",
    "so_pointjax/proj/tests",
]
